@@ -1,16 +1,15 @@
+AUX awk.nanorc 1504 RMD160 c932525ef987d799b255d308a1d354a56d3302a7 SHA1 22da2f05cabf3ae14a85352133315712816cab7b SHA256 c4fb326c9a11a56220dd8a566918c389794fd25e1cc3fda94c5925e5367977bb
+AUX css.nanorc 327 RMD160 a2d28f8f74c53b46d85d6ad986ad7dde7b3b7e50 SHA1 184cc1768789564d795398240ac814a9ae9f835d SHA256 0c2ea24540d9a87abb8c68e5eb042d396ec91a58cd53ea135b5548ea92c67913
 AUX gentoo.nanorc 2578 RMD160 65460270bc9e9e8041570124ccc510311761403d SHA1 e431cc0c034c354817a553a859e9256da1f31211 SHA256 82318b18536d3113238b91a2ed1d42aead0c6080492c540a4f8fdddccd8bbbd4
 AUX nano-1.3.12-fix2.patch 481 RMD160 8c86b8bed823db226e5c7492c4bcd371e3ec6619 SHA1 96eb32aad43f86d51a67e3cd218b77bf01f64d95 SHA256 4c074af7006e583c0d5a3e8f25a13dc511200cf771934f75a464669dbb73eab1
 AUX nano-1.3.12-path.patch 6465 RMD160 9e7777d4bb908f83c65d50d833a011025c676379 SHA1 a97ea431823d2336c9946d856168799d54333e7a SHA256 ebc54d890a3d2ab8c435b4cee3790e8920c055db9fce86312e8ab1457bfdf721
 AUX nano-1.3.12-scroll.patch 1357 RMD160 0ff451539b959ed1b48995cacec0ee5938f51390 SHA1 c6da5900c9fa9d017d90301e978e3dda991949d4 SHA256 5f44b124d829c3a1d98be782de90728e425e8cd8c7fac73fe36c8dfaa97d4773
+AUX xml.nanorc 260 RMD160 eeb168220d7a96ba20c8a537b24e850211bf8cee SHA1 c74a37a415aaa119453060114a06c1dd7291b663 SHA256 d8de59f2993d921801e38127043a05b07277373b32714e7489d0947b3415a406
 DIST nano-1.3.12.tar.gz 1250777 RMD160 f594c4805af873718828b0aedba06c1f89946458 SHA1 70ff08220ebd00399569d64d308a2edc54505264 SHA256 f5537b8a988618fa8524b6a4b0a6950184d37db983b4521ad843b98845da571c
 DIST nano-2.1.10.tar.gz 1478204 RMD160 00185bca50d0ab5abfe42aab8040a78ecb1eb207 SHA1 dafa7b64fb5a8bf14bb4cad476b5d03b1a182fbc SHA256 03af11adace9f6c482a06f5304c5aba5d134972a416ce4368307b604420b2e40
-DIST nano-2.2.0.tar.gz 1495381 RMD160 f663828c1dc6c473fc32d61f4c415471e913e2db SHA1 3a845a4df83828921c1ca2d913fe45cc46c6308d SHA256 c1e5e9c2baf2c4cfae6bebd1499ef9c20bfd5e094a966ed3d73a3a9e3f641e2f
-DIST nano-2.2.1.tar.gz 1499969 RMD160 639dc1b4ac709aa78105643c0311d108e4cff951 SHA1 427f0fa9a45f6ce7a7ef88ce58213a04f6e2e9f8 SHA256 d831c7c3b35ccd404b58d3244f671ad775a8bdd189bb81512fbfea1b0f6d14f7
-DIST nano-2.2.2.tar.gz 1502406 RMD160 1d8b40cfdaab6c5bb87ade42e3407c8fc0408cee SHA1 be8c1be6ddee8e7301a904f134107602f2863a2d SHA256 2e214b645672feed8ac4e34e3d90df6ec2cf2fbe162c2885d9e9117d36455158
+DIST nano-2.2.3.tar.gz 1528017 RMD160 b940db998367d55df92e08c26ddc30d8f05ed70c SHA1 43677d23921806d70018197ed0e99754b5b5ad78 SHA256 22f20ac3e17d8dcaff54389bdb417a4a0a099843ea7915225e48dedc474af4ee
 EBUILD nano-1.3.12-r1.ebuild 2057 RMD160 02dc97ca75f649164e30bed8717753ce10aecffb SHA1 ce5f9fa4b64ebdc9a0daca69a314114ead76e9e3 SHA256 cdc153255f259b522da70daca7045f35c64859c71c14fa23a553d4e95032eb9e
 EBUILD nano-2.1.10.ebuild 2264 RMD160 9a5a6fb80ceeaf66647d9930a3acf48eec16ab96 SHA1 765f2a26db2286f96deed53db7e66e535703a9ef SHA256 d08db09b8abc67770f28a345603a169e5e5156a2a929455724ef4110ff5deb31
-EBUILD nano-2.2.0.ebuild 2263 RMD160 46a32b36885de8883881c64663cda2973b6a4fb6 SHA1 e5e1a74aac2dc3098d88b7f4147a246785db8fed SHA256 a84b8cf99bcede5db8643118faf564300ec7024e8485830d3ee741d09ce3af56
-EBUILD nano-2.2.1.ebuild 2263 RMD160 7d7ad3dfd7cc1bebf9f111f310f44d778d10859d SHA1 36d205c783f58078769674cc35bc8fb84164029a SHA256 9ef21971cfb4c2d4a21416695204af51ee7e8985896c7a8e3ca6bc048a7953ff
-EBUILD nano-2.2.2.ebuild 2263 RMD160 ae724a912573daa355ff05185a3183f940bd0a6e SHA1 0bd647e63400f0d2442116e115b5272d4a18efda SHA256 d4de2e3b26e60e1ec1811f924ce8647efa143ab13b23bfb7ee582c5eff0dc9e7
-MISC ChangeLog 28552 RMD160 34eee825c8f4d427092e796b97774e46fd6989a3 SHA1 abfa4f4f50d19c66c770c27888b1de72a03e5023 SHA256 2632f39a64aced6d43bcb3986abd8e25e93c7b3aa66d7606755719e6b69a79e6
+EBUILD nano-2.2.3.ebuild 2263 RMD160 bbf154153ef7b451f0b1640106967e7d4757e0ce SHA1 e79038d9453b54f52081bcded0646f0be2b80ce6 SHA256 9ca145370349fa80024cd26178745d9805b602c337c15dd73a0e9a20a74c9c26
+MISC ChangeLog 28666 RMD160 a91f1412751cfe2cbeadb97cd93e0f251c9769e8 SHA1 17439d199abbef81b4635ca3caf33b8a72f35845 SHA256 b9ac92999e98694fef6c78a0b0f5ed85ce4a3bed1e8bc205eb998faf6ae8d095
 MISC metadata.xml 1055 RMD160 5ef8d82cdf250abb5cffa58383c7b4d50f81d155 SHA1 4026434ab09a45edff0543c2c20e0fd20e6c03ed SHA256 8cbe9b49592bc79d362fd390c5d5b1782c0765c6f88a91aa199858ad73dec408
