@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/nano-2.2.1.ebuild,v 1.1 2009/12/13 07:56:54 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/nano-2.2.3.ebuild,v 1.1 2010/02/11 08:41:17 vapier Exp $
 
 EAPI=2
 inherit eutils
