@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/nano
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/ChangeLog,v 1.245 2010/01/18 06:15:43 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/nano/ChangeLog,v 1.246 2010/02/11 08:41:17 vapier Exp $
+
+*nano-2.2.3 (11 Feb 2010)
+
+  11 Feb 2010; Mike Frysinger <vapier@gentoo.org> +nano-2.2.3.ebuild:
+  Version bump.
 
 *nano-2.2.2 (18 Jan 2010)
 
